<Feature>:<add snapmaker original board>

--- a/platformio.ini
+++ b/platformio.ini
@@ -18,7 +18,7 @@
 [platformio]
 src_dir      = Marlin
 boards_dir   = buildroot/share/PlatformIO/boards
-default_envs = mega2560
+default_envs = snapmaker_original
 
 [common]
 default_src_filter = +<src/*> -<src/config> -<src/HAL> +<src/HAL/shared>
@@ -27,9 +27,9 @@ build_flags = -fmax-errors=5 -g -D__MARLIN_FIRMWARE__ -fmerge-all-constants
 lib_deps =
   LiquidCrystal
   TMCStepper@>=0.6.2,<1.0.0
-  Adafruit NeoPixel
+ # Adafruit NeoPixel
   U8glib-HAL=https://github.com/MarlinFirmware/U8glib-HAL/archive/bugfix.zip
-  Adafruit_MAX31865=https://github.com/adafruit/Adafruit_MAX31865/archive/master.zip
+ # Adafruit_MAX31865=https://github.com/adafruit/Adafruit_MAX31865/archive/master.zip
   LiquidTWI2=https://github.com/lincomatic/LiquidTWI2/archive/master.zip
   Arduino-L6470=https://github.com/ameyer/Arduino-L6470/archive/0.8.0.zip
   SailfishLCD=https://github.com/mikeshub/SailfishLCD/archive/master.zip
@@ -53,6 +53,43 @@ monitor_speed = 250000
 #   build for a given board.    #
 #                               #
 #################################
+
+#
+# SNAPMAKER ORIGINAL
+#
+[env:snapmaker_original]
+platform          = ststm32@<6.2.0
+board             = genericSTM32F103RC
+#snapmakerSTM32F105RC
+platform_packages = tool-stm32duino
+build_flags       = !python Marlin/src/HAL/STM32F1/build_flags.py
+  ${common.build_flags} -std=gnu++14
+build_unflags     = -std=gnu++11
+src_filter        = ${common.default_src_filter} +<src/HAL/STM32F1>
+lib_deps          = ${common.lib_deps}
+  SoftwareSerialM=https://github.com/FYSETC/SoftwareSerialM/archive/master.zip
+lib_ignore        = Adafruit NeoPixel, SPI
+monitor_speed     = 115200
+debug_tool        = jlink
+upload_protocol   = jlink
+
+#
+# STM32F103RC
+#
+[env:STM32F103RC]
+platform          = ststm32@<6.2.0
+board             = genericSTM32F103RC
+platform_packages = tool-stm32duino
+build_flags       = !python Marlin/src/HAL/STM32F1/build_flags.py
+  ${common.build_flags} -std=gnu++14
+build_unflags     = -std=gnu++11
+src_filter        = ${common.default_src_filter} +<src/HAL/STM32F1>
+lib_deps          = ${common.lib_deps}
+  SoftwareSerialM=https://github.com/FYSETC/SoftwareSerialM/archive/master.zip
+lib_ignore        = Adafruit NeoPixel, SPI
+monitor_speed     = 115200
+debug_tool        = jlink
+upload_protocol   = jlink
 
 #
 # ATmega2560
@@ -244,22 +281,6 @@ lib_deps          = Servo
   TMCStepper@>=0.6.1,<1.0.0
   Adafruit NeoPixel=https://github.com/p3p/Adafruit_NeoPixel/archive/release.zip
   SailfishLCD=https://github.com/mikeshub/SailfishLCD/archive/master.zip
-
-#
-# STM32F103RC
-#
-[env:STM32F103RC]
-platform          = ststm32
-board             = genericSTM32F103RC
-platform_packages = tool-stm32duino
-build_flags       = !python Marlin/src/HAL/STM32F1/build_flags.py
-  ${common.build_flags} -std=gnu++14
-build_unflags     = -std=gnu++11
-src_filter        = ${common.default_src_filter} +<src/HAL/STM32F1>
-lib_deps          = ${common.lib_deps}
-  SoftwareSerialM=https://github.com/FYSETC/SoftwareSerialM/archive/master.zip
-lib_ignore        = Adafruit NeoPixel, SPI
-monitor_speed     = 115200
 
 #
 # STM32F103RC_fysetc
