--- a/platformio.ini
+++ b/platformio.ini
@@ -59,12 +59,12 @@ monitor_speed = 250000
 #
 [env:snapmaker_original]
 platform          = ststm32@<6.2.0
-board             = genericSTM32F103RC
-#board             = snapmakerSTM32F105RC
+board             = snapmakerSTM32F105RC
 platform_packages = tool-stm32duino
 build_flags       = !python Marlin/src/HAL/STM32F1/build_flags.py
   ${common.build_flags} -std=gnu++14
 extra_scripts = pre:snapmaker/scripts/prepare-build.py
+  post:buildroot/share/PlatformIO/scripts/snapmaker.py
   post:arduino_framework/scripts/cat-env.py
   post:arduino_framework/scripts/prepare-upload.py
 build_unflags     = -std=gnu++11
